# Buildie

./: .gitignore  App.tsx  README.md  app.json  asset-manifest.json  babel.config.js  index.html  manifest.json  package-lock.json  package.json  tsconfig.json
Types/: Game.ts  Player.ts  Score.ts  User.ts
components/: AppBootStrap.tsx  index.ts
components/Game/: Board.tsx  Cell.tsx  Game.tsx  GameStatistic.tsx  (+3 more)
config/: AppNavigator.tsx  GameNavigator.tsx  Navigator.tsx  RootNavigator.tsx
constants/: Colors.ts  Commands.ts  PersistedData.ts  Points.ts  Shapes.json  Soundtracks.ts
helpers/: db.ts  utils.ts
hooks/: useConst.tsx  useForceUpdate.tsx  useForm.tsx  useGameLoop.tsx  usePushNotification.tsx  useSounds.tsx
models/: Board.ts  BoardPool.ts  Game.ts  Piece.ts  PiecePool.ts  PieceSpawner.ts  Player.ts  Shape.ts  ShapeFactory.ts  User.ts
reducers/: inputReducer.ts
rust_server/: Cargo.toml
rust_server/src/: lib.rs  main.rs  schema.rs
screens/: AuthScreen.tsx  GameModalScreen.tsx  GameoverScreen.tsx  HomeScreen.tsx  LeaderboardScreen.tsx  MultiplayerGameScreen.tsx  MultiplayerLobbyScreen.tsx  MultiplayerScreen.tsx  ProfileScreen.tsx  Settings.tsx  SettingsScreen.tsx  SingleplayerScreen.tsx  SplashScreen.tsx  index.ts
server/: index.ts  nodemon.json  package-lock.json  package.json  tsconfig.json
services/: gameApi.ts  gqlConfig.ts  graphqlBaseQuery.ts  graphqlBaseQueryTypes.ts
store/: auth.ts  authThunk.ts  authThunks.ts  gameState.ts  hooks.ts  index.ts  scores.ts  settings.ts  settingsThunks.ts
web-build/: asset-manifest.json  index.html
(+57 files in other folders)
