[package]
name = "rust_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
path = "src/lib.rs"

[dependencies]
actix-web = "4"
actix-cors = "0.6.4"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
juniper = "0.15.11"
juniper_actix = "0.4.0"

